--- a/DictionaryEditorNew/appsettings.json
+++ b/DictionaryEditorNew/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "dictionary_json": "Server=(localdb)\\mssqllocaldb;Database=dictionary_json;Trusted_Connection=True;"
+    "dictionary_json2": "Server=(localdb)\\mssqllocaldb;Database=dictionary_json2;Trusted_Connection=True;"
   }
 
 }
