--- a/DictionaryEditorNew/appsettings.Development.json
+++ b/DictionaryEditorNew/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     //"dictionary_json": "workstation id=dictionaryeditor.mssql.somee.com;packet size=4096;user id=MaratKarsanov_SQLLogin_1;pwd=w9bjktkzvq;data source=dictionaryeditor.mssql.somee.com;persist security info=False;initial catalog=dictionaryeditor;TrustServerCertificate=True;Encrypt=false;"
-    "dictionary_json": "Server=217.28.223.127,17160;User Id=user_151b2;Password=3Bo}Q/8irG!7;Database=db_79e55;Encrypt=false;"
+    //"dictionary_json": "Server=217.28.223.127,17160;User Id=user_151b2;Password=3Bo}Q/8irG!7;Database=db_79e55;Encrypt=false;"
   }
 }
