--- a/DictionaryEditorNew/appsettings.json
+++ b/DictionaryEditorNew/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"dictionary_json": "Server=(localdb)\\mssqllocaldb;Database=dictionary_json2;Trusted_Connection=True;"
+    "dictionary_json": "Server=(localdb)\\mssqllocaldb;Database=dictionary_json2;Trusted_Connection=True;"
     //"dictionary_json": "workstation id=dictionaryeditor.mssql.somee.com;packet size=4096;user id=MaratKarsanov_SQLLogin_1;pwd=w9bjktkzvq;data source=dictionaryeditor.mssql.somee.com;persist security info=False;initial catalog=dictionaryeditor;TrustServerCertificate=True;Encrypt=false;"
   }
 
